# screen-monitor

./: .gitignore  BROWSER_EXTENSION_SETUP.md  CLAUDE.md  Makefile  PROJECT_OVERVIEW.md  README.md  motion.py  pyproject.toml  quick_motion_test.py  requirements.txt  screen-monitor.py  test_browser_integration.py  test_browser_with_llm.py  test_comprehensive_verbose.py  test_detection_integration.py  test_focused_motion.py  test_motion_areas.py  test_phase1.py  test_ultra_verbose.py  test_verbose_api.py  test_vision_detection.py
browser-extension/: background.js  content.js  manifest.json  popup.html  popup.js
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  SECURITY_GUIDELINES.md  SOLUTION_STRUCTURE.md  TECHNOLOGY_STACK.md
resources/configs/: default_config.yaml
scripts/: dev_setup.py
src/: __init__.py
src/asam/: __init__.py  __main__.py  main.py
src/asam/config/: __init__.py  manager.py
src/asam/core/: __init__.py  service.py
src/asam/core/actions/: __init__.py  executor.py
src/asam/core/capture/: __init__.py  screen.py
src/asam/core/config/: __init__.py  validator.py
src/asam/core/detection/: __init__.py  aggregator.py  engine.py  rules.py  types.py
src/asam/core/detection/analyzers/: __init__.py  base.py  network.py  process.py  text.py  vision.py
src/asam/detectors/: __init__.py
src/asam/integrations/: __init__.py  browser.py
src/asam/platform/: __init__.py
src/asam/security/: __init__.py
src/asam/utils/: logging.py
tests/: __init__.py  conftest.py
tests/integration/: test_service_integration.py
tests/unit/: test_config_validation.py  test_detection_engine.py  test_screen_capture.py
